--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,7 +8,10 @@ target 'cic_app' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper'
 
   target 'cic_appTests' do
     inherit! :complete
