--- a/ios/cic_app.xcodeproj/xcshareddata/xcschemes/cic_app.xcscheme
+++ b/ios/cic_app.xcodeproj/xcshareddata/xcschemes/cic_app.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "cic_app.app"
+               BuildableName = "CIC App.app"
                BlueprintName = "cic_app"
                ReferencedContainer = "container:cic_app.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "cic_app.app"
+            BuildableName = "CIC App.app"
             BlueprintName = "cic_app"
             ReferencedContainer = "container:cic_app.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "cic_app.app"
+            BuildableName = "CIC App.app"
             BlueprintName = "cic_app"
             ReferencedContainer = "container:cic_app.xcodeproj">
          </BuildableReference>
